# snakemake-starter

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Snakefile  VISION.md  docker-compose.yml  dockerfile.snakemake  environment-dev.yaml  environment.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
config/: config.yaml  some-sheet.tsv
scripts/: count_reads.py
workflow/: Snakefile
workflow/rules/: count_reads.smk  merge_counts.smk
workflow/scripts/: count_reads.py  merge_counts.py
