[project]
name = "snakemake-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # All dependencies are managed by conda (environment.yaml).
    # This file exists only to satisfy tooling that expects a pyproject.toml.
]
